[workspace]
members = [
        "zebrad",
        "zebra-chain",
        "zebra-network",
        "zebra-state",
        "zebra-script",
        "zebra-consensus",
        "zebra-rpc",
        "zebra-client",
        "zebra-test",
        "zebra-utils",
        "tower-batch",
        "tower-fallback",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
bellman = { git = "https://github.com/zcashfoundation/librustzcash.git", branch = "batch-bellman" }
pairing = { git = "https://github.com/zcashfoundation/librustzcash.git", branch = "batch-bellman" }
